@@ -25,27 +25,20 @@ Move-Item ./target/cryptomator-cli-*.jar ./target/mods -ErrorAction Stop
 
 Write-Host "Creating JRE with jlink..."
 & $env:JAVA_HOME/bin/jlink `
---verbose `
---output target/runtime `
---module-path "${env:JAVA_HOME}/jmods" `
---add-modules java.base,java.compiler,java.naming,java.xml `
---strip-native-commands `
---no-header-files `
---no-man-pages `
---strip-debug `
---compress zip-0
+    `@./dist/jlink.args `
+    --module-path "${env:JAVA_HOME}/jmods"
 
 if ( ($LASTEXITCODE -ne 0) -or (-not (Test-Path ./target/runtime))) {
-   throw "JRE creation with jLink failed with exit code $LASTEXITCODE."
+    throw "JRE creation with jLink failed with exit code $LASTEXITCODE."
 }
 
 # jpackage
 # app-version is hard coded, since the script is only for local test builds
 Write-Host "Creating app binary with jpackage..."
 & $env:JAVA_HOME/bin/jpackage `
-`@./dist/jpackage.args `
---java-options "--enable-native-access=org.cryptomator.jfuse.win" `
---win-console
+    `@./dist/jpackage.args `
+    --java-options "--enable-native-access=org.cryptomator.jfuse.win" `
+    --win-console
 
 if ( ($LASTEXITCODE -ne 0) -or (-not (Test-Path ./target/cryptomator-cli))) {
     throw "Binary creation with jpackage failed with exit code $LASTEXITCODE."
